@@ -10,7 +10,7 @@ FROM eclipse-temurin:17
 
 COPY --from=build /home/gradle/src/server/build/libs/*.jar /app/server.jar
 
-ENTRYPOINT ["java","-XX:ErrorFile=/config/hs_err_pid%p.log","-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=/config/heap.hprof", "-XX:+PrintGCDetails","-XX:+PrintGCDateStamps","-Xloggc:/config/gc.log", "-XX:NativeMemoryTracking=summary", "-XX:+UnlockDiagnosticVMOptions" ,"-jar", "/app/server.jar"]
+ENTRYPOINT ["java","-XX:ErrorFile=/config/hs_err_pid%p.log","-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=/config/heap.hprof", "-XX:+PrintGCDetails", "-XX:NativeMemoryTracking=summary", "-XX:+UnlockDiagnosticVMOptions" ,"-jar", "/app/server.jar"]
 
 
 
